--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
+        <h1>My GitPage</h1>
+        <p>This is my firt github page</p>
         <script src="./script.js">
 
         </script>
